--- a/CSS_1/HW/bai2.2/page22.html
+++ b/CSS_1/HW/bai2.2/page22.html
@@ -4,35 +4,42 @@
 	<title></title>
 	<meta charset="utf-8">
 	<style type="text/css"></style>
-	<link rel="stylesheet" type="text/css" href="file22.css">
+	<link rel="stylesheet" type="text/css" href="flie22.css">
 </head>
 <body>
-	<div id="id1">
+	<div id="id11">
 		<img src="../image/ico_check.gif" alt="">
 		<font size="3">&nbsp;Quy định sử dụng</font>
 	</div>
-	<div id="id1">
+	<div id="id12">
 		<img src="../image/ico_check.gif" alt="">
 		<font size="3">&nbsp;Hướng dẫn thanh toán</font>
 	</div>
-	<div id="id1">
+	<div id="id13">
 		<img src="../image/ico_check.gif" alt="">
 		<font size="3">&nbsp;Download bảng giá</font>
 	</div>
-	<div class="cl1">
-		
+	<div id="id31">
+		Sale1:<br>
+		<img src="../image/offline.gif" alt="">
+
 	</div>
-	<div>
-		
+	
+	<div id = "id21">
+		<img src="../image/img_kinhdoanh.gif" alt="">
+		<font size="3" color="#37e8d6"><b>&nbsp;Liên hệ kinh doanh</b></font>
 	</div>
-	<div>
-		
+	<div id = "id22">
+		<img src="../image/img_kinhdoanh.gif" alt="">
+		<font size="3" color="#37e8d6"><b>&nbsp;Hỗ trợ kỹ thuật</b></font>
 	</div>
-	<div>
-		
+	<div id="id23">
+		<img src="../image/img_kinhdoanh.gif" alt="">
+		<font size="3" color="#37e8d6"><b><u>&nbsp;Góp ý công ty</u></b></font>
 	</div>
-	<div>
-		
+	<div id="id32">
+		Sale2:<br>
+		<img src="../image/online.gif" alt="">
 	</div>
 </body>
 </html>
