--- a/CSS_1/HW/bai2.1/page21.html
+++ b/CSS_1/HW/bai2.1/page21.html
@@ -10,10 +10,10 @@
 	<link rel="stylesheet" type="text/css" href="file1.css">
 </head>
 <body>
-	<div id="id0" class="class0x">
+	<div id="id0">
 		
 	</div>
-	<div id="id1" class="class1x">
+	<div class="class1x">
 		<img src="../image/1.jpg" alt="" >
 		<br><br>
 		<br><font color="#f4a142" size="4"><b>Galaxy Tab<b></font>
@@ -22,7 +22,7 @@
 	<div class="class0x">
 		
 	</div>
-	<div id="id2" class="class1x">
+	<div class="class1x">
 		<img src="../image/2.jpg" alt="" >
 		<br><br>
 		<br><font color="#f4a142" size="4"><b>Galaxy Tab<b></font>
@@ -31,7 +31,7 @@
 	<div class="class0x">
 		
 	</div>
-	<div id="id3" class="class1x">
+	<div class="class1x">
 		<img src="../image/3.jpg" alt="" >
 		<br><br>
 		<br><font color="#f4a142" size="4"><b>Galaxy Tab<b></font>
@@ -40,7 +40,7 @@
 	<div class="class0x">
 		
 	</div>
-	<div id="id4" class="class1x">
+	<div class="class1x">
 		<img src="../image/4.jpg" alt="" >
 		<br><br>
 		<br><font color="#f4a142" size="4"><b>Galaxy Tab<b></font>
@@ -49,8 +49,14 @@
 	<div class="class0x">
 		
 	</div>
-	<div id="id5" class="class1x">
+	<div class="class1x">
 		<img src="../image/5.jpg" alt="" >
+		<br><br>
+		<br><font color="#f4a142" size="4"><b>Galaxy Tab<b></font>
+		<br><font color="#e81f09" size="4"><b>15.000.000 VNĐ<b></font>
+	</div>
+	<div class="class1x">
+		<img src="../image/6.jpg" alt="" >
 		<br><br>
 		<br><font color="#f4a142" size="4"><b>Galaxy Tab<b></font>
 		<br><font color="#e81f09" size="4"><b>15.000.000 VNĐ<b></font>
