--- a/CSS_1/HW/bai1/page11.html
+++ b/CSS_1/HW/bai1/page11.html
@@ -7,10 +7,12 @@
 	<link rel="stylesheet" type="text/css" href="file11.css">
 </head>
 <body>
+
 <form>
-	<table width="700px" height="1100px" border="2px bordercolor="red" align="center">
+
+	<table width="900px" height="335px" border="2px bordercolor="red" align="center">
 		<tr height="300px">
-			<td><img src="../image/123.jpg" alt="" width="700px" height="300px"></td>
+			<td><img src="../image/123.jpg" alt="" width="900px" height="300px"></td>
 		</tr>
 		<tr height="30px">
 			<td bgcolor="#352d2d">
@@ -23,9 +25,84 @@
 				</div>
 			</td>
 		</tr>
-		<tr>
-			<hr size="2px" >
+		<tr height="5px">
+			<td><hr width="900px" size="2px" color="#6e727a" align="center"></td>	
 		</tr>
+	<table width="914px" height="500px" border="2px bordercolor="red" align="center">
+		<tr>
+			<td width="150">
+				<div class="image_menu_bar" align="center">
+					<font color="white" size="3"><b>Danh mục chính</b></font>
+				</div>	
+			</td>
+			<td width="600" rowspan="2" height="60">
+				<p align="center">
+					ACADEMY - đơn vị chuyên đào tạo các lập trình viên chuyên nghiệp cho các 
+					thị trường Bắc Mỹ và Canada cũng như các doanh nghiệp trong nước. Chúng tôi hy vọng sẽ 
+					mang đến cho các doanh nghiệp những cá nhân xuât sắc nhất phù hợp với yêu cầu công.
+				</p>	
+			</td>
+			<td width="150">
+				<div class="image_menu_bar" align="center">
+					<font color="white" size="3"><b>Tư vấn trực tuyến</b></font>
+				</div>	
+			</td>
+		</tr>
+		<tr>
+			<td width="150"><font color="blue" size="2">Gia công phần mềm</font></td>
+			
+			<td width="150" rowspan="2"><img src="image/offline.gif" alt="" width="100%" height="100%"></td>
+		</tr>
+		<tr>
+			<td width="150"><font color="blue" size="2">Đào tạo lâp trình viên</font></td>
+			<td width="600" rowspan="2"></td>
+			
+		</tr>
+		<tr>
+			<td width="150"><font color="blue" size="2">Tư vấn doanh nghiệp</font></td>
+			
+			<td width="150" rowspan="2"><img src="image/online.gif" alt="" width="100%" height="100%"></td>
+		</tr>
+		<tr>
+			<td width="150"><font color="blue" size="2">Ảnh viện áo cưới</font></td>
+			<td width="600" height="30"><img src="image/main_bar_right.gif" alt="" width="600" height="30"></td>
+			
+		</tr>
+		<tr>
+			<td width="150"></td>
+			<td width="600"><font color="orange">Gia Công Phần mềm</font></td>
+			<td width="150">
+				<div class="image_menu_bar" align="center">
+					<font color="white" size="2"><b>Các bài viết mới</b></font>
+				</div>
+			</td>
+		</tr>
+		<tr>
+			<td width="150"><font color="blue" size="2">Hướng dẫn đăng ký học</font></td>
+			<td></td>
+			<td width="150"><font color="blue" size="2">Hit access trong PHP</font></td>
+		</tr>
+		<tr>
+			<td width="150"><font color="blue" size="2">Hình thức học tập onine</font></td>
+			<td></td>
+			<td width="150"><font color="blue" size="2">HTML 5 & CEO</font></td>
+		</tr>
+		<tr>
+			<td width="150"><font color="blue" size="2">Cài đặt sử dụng skype</font></td>
+			<td></td>
+			<td width="150"><font color="blue" size="2">Viết trang login và logout cho hệ thống</font></td>
+		</tr>
+		<tr>
+			<td width="150"><font color="blue" size="2">Cài đặt sử dụng Teamview</font></td>
+			<td></td>
+			<td width="150"><font color="blue" size="2">CSS nâng cao</font></td>
+		</tr>
+		<tr>
+			<td width="150"><font color="blue" size="2"></font></td>
+			<td></td>
+			<td width="150"><font color="blue" size="2">Làm min da với photoshop CS3</font></td>
+		</tr>
+	</table>	
 	</table>
 </form>
 </body>
