--- a/CSS_1/HW/bai2.1/page21.html
+++ b/CSS_1/HW/bai2.1/page21.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -7,62 +6,62 @@
 	<style type="text/css">
 		
 	</style>
-	<link rel="stylesheet" type="text/css" href="file1.css">
+	<link rel="stylesheet" type="text/css" href="file21.css">
 </head>
 <body>
-	<div id="id0">
+	<div class="cl2">
 		
 	</div>
-	<div class="class1x">
+	<div class="cl1">
 		<img src="../image/1.jpg" alt="" >
 		<br><br>
 		<br><font color="#f4a142" size="4"><b>Galaxy Tab<b></font>
 		<br><font color="#e81f09" size="4"><b>15.000.000 VNĐ<b></font>
 	</div>
-	<div class="class0x">
+	<div class="cl2">
 		
 	</div>
-	<div class="class1x">
+	<div class="cl1">
 		<img src="../image/2.jpg" alt="" >
 		<br><br>
 		<br><font color="#f4a142" size="4"><b>Galaxy Tab<b></font>
 		<br><font color="#e81f09" size="4"><b>15.000.000 VNĐ<b></font>
 	</div>
-	<div class="class0x">
+	<div class="cl2">
 		
 	</div>
-	<div class="class1x">
+	<div class="cl1">
 		<img src="../image/3.jpg" alt="" >
 		<br><br>
 		<br><font color="#f4a142" size="4"><b>Galaxy Tab<b></font>
 		<br><font color="#e81f09" size="4"><b>15.000.000 VNĐ<b></font>
 	</div>
-	<div class="class0x">
+	<div class="cl2">
 		
 	</div>
-	<div class="class1x">
+	<div class="cl1">
 		<img src="../image/4.jpg" alt="" >
 		<br><br>
 		<br><font color="#f4a142" size="4"><b>Galaxy Tab<b></font>
 		<br><font color="#e81f09" size="4"><b>15.000.000 VNĐ<b></font>
 	</div>
-	<div class="class0x">
+	<div class="cl2">
 		
 	</div>
-	<div class="class1x">
+	<div class="cl1">
 		<img src="../image/5.jpg" alt="" >
 		<br><br>
 		<br><font color="#f4a142" size="4"><b>Galaxy Tab<b></font>
 		<br><font color="#e81f09" size="4"><b>15.000.000 VNĐ<b></font>
 	</div>
-	<div class="class1x">
+	<div class="cl2">
+		
+	</div>
+	<div class="cl1">
 		<img src="../image/6.jpg" alt="" >
 		<br><br>
 		<br><font color="#f4a142" size="4"><b>Galaxy Tab<b></font>
 		<br><font color="#e81f09" size="4"><b>15.000.000 VNĐ<b></font>
 	</div>
-
-	
-
 </body>
 </html>
