--- a/B5_CSS_2/HW/bai2/page.html
+++ b/B5_CSS_2/HW/bai2/page.html
@@ -9,13 +9,11 @@
 </head>
 <body>
 	
-	<div id="wrapper">
+	<div id="wall">
 
 		<div id="header">
-			<div class="logo">
-				<h1>
-					ZENT GROUP
-				</h1>
+			<div class="header_title">
+				<h1>ZENT GROUP</h1>
 			</div>
 			<div class="menu-header">
 				<ul class="menu">
@@ -37,62 +35,62 @@
 				</ul>
 			</div>
 		</div>
-		<!-- ==============BEGIN MAIN============== -->
-		<div id="main">
-			<!-- ==========BEGIN MAIN-LEFT========= -->
-			<div id="main-left">
+		
+		<div>
+			
+			<div id="main_left">
 				<ul class="left-menu">
-					<li class="menu1 left-mn">
+					<li class="menu1 left_mn">
 						<a href="">
 							Home
 						</a>
 					</li>
-					<li class="menu1 left-mn">
+					<li class="menu1 left_mn">
 						<a href="">
 							Tab Galley
 						</a>
 					</li>
-					<li class="menu1 left-mn">
+					<li class="menu1 left_mn">
 						<a href="">
 							Create Tab
 						</a>
 					</li>
-					<li class="menu1 left-mn">
+					<li class="menu1 left_mn">
 						<a href="">
 							Favorites
 						</a>
 					</li>
-					<li class="menu1 left-mn">
+					<li class="menu1 left_mn">
 						<a href="">
 							Tech News
 						</a>
 					</li>
-					<li class="menu1 left-mn">
+					<li class="menu1 left_mn">
 						<a href="">
 							Travel
 						</a>
 					</li>
-					<li class="menu1 left-mn">
+					<li class="menu1 left_mn">
 						<a href="">
 							Photography
 						</a>
 					</li>
-					<li class="menu1 left-mn">
+					<li class="menu1 left_mn">
 						<a href="">
 							Finance World
 						</a>
 					</li>
-					<li class="menu1 left-mn">
+					<li class="menu1 left_mn">
 						<a href="">
 							Movies
 						</a>
 					</li>
-					<li class="menu1 left-mn">
+					<li class="menu1 left_mn">
 						<a href="">
 							Cooking
 						</a>
 					</li>
-					<li class="menu1 left-mn">
+					<li class="menu1 left_mn">
 						<a href="">
 							Fashion
 						</a>
@@ -100,46 +98,46 @@
 				</ul>
 				
 			</div>
-			<!-- ==========BEGIN MAIN-RIGHT========= -->
-			<div id="main-right">
-				 <div class="news">
+			
+			<div id="main_right">
+				 <div class="items">
 					<p>Tech News</p>
 					<img src="img/ip.jpg" alt="">
-					<p class="new-child">Zent phone by Zent Group</p>
+					<p class="items_bot">Zent phone by Zent Group</p>
 				</div>
-				 <div class="news">
-					<p>Tech News</p>
+				 <div class="items">
+					<p>Travel</p>
 					<img src="img/movie.jpg" alt="">
-					<p class="new-child">Zent phone by Zent Group</p>
+					<p class="items_bot">Zent phone by Zent Group</p>
 				</div>
-				 <div class="news">
-					<p>Tech News</p>
+				 <div class="items">
+					<p>Photography</p>
 					<img src="img/fashion.jpg" alt="">
-					<p class="new-child">Zent phone by Zent Group</p>
+					<p class="items_bot">Zent phone by Zent Group</p>
 				</div>
-				 <div class="news">
-					<p>Tech News</p>
+				 <div class="items">
+					<p>Finace World</p>
 					<img src="img/cooking.jpg" alt="">
-					<p class="new-child">Zent phone by Zent Group</p>
+					<p class="items_bot">Zent phone by Zent Group</p>
 				</div>
-				 <div class="news">
-					<p>Tech News</p>
+				 <div class="items">
+					<p>Movies</p>
 					<img src="img/photo.jpg" alt="">
-					<p class="new-child">Zent phone by Zent Group</p>
+					<p class="items_bot">Zent phone by Zent Group</p>
 				</div>
-				 <div class="news">
-					<p>Tech News</p>
+				 <div class="items">
+					<p>Cooking</p>
 					<img src="img/4.jpg" alt="">
-					<p class="new-child">Zent phone by Zent Group</p>
+					<p class="items_bot">Zent phone by Zent Group</p>
 				</div>
-				 <div class="news">
-					<p>Tech News</p>
+				 <div class="items">
+					<p>Fashion</p>
 					<img src="img/travel.jpg" alt="">
-					<p class="new-child">Zent phone by Zent Group</p>
+					<p class="items_bot">Zent phone by Zent Group</p>
 				</div>
 			</div>
 		</div>
-		<!-- ==============BEGIN FOOTER============= -->
+		
 		<div id="footer">
 			<ul>
 			<li class="mn-ft ">
